--- a/hakkimda.html
+++ b/hakkimda.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="bg">
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand  " href="main.html">Müzik Dükkanım</a>
