--- a/urunler.html
+++ b/urunler.html
@@ -11,15 +11,15 @@
     <title>Hello, world!</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body >
+  <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <a class="navbar-brand" href="main.html">Müzik Dükkanım</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse " id="navbarNavDropdown">
+          <ul class="navbar-nav ">
             <li class="nav-item active">
               <a class="nav-link" href="main.html">Ana Sayfa <span class="sr-only">(current)</span></a>
             </li>
